--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.blocko</groupId>
-  <artifactId>dapp-sample</artifactId>
+  <artifactId>simple-dapp</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
@@ -12,9 +12,16 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <coinstack.version>3.5.1</coinstack.version>
   </properties>
 
   <dependencies>
+		<!-- https://mvnrepository.com/artifact/io.blocko/coinstack -->
+		<dependency>
+				<groupId>io.blocko</groupId>
+				<artifactId>coinstack</artifactId>
+				<version>${coinstack.version}</version>
+		</dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
