--- a/pom.xml
+++ b/pom.xml
@@ -11,17 +11,23 @@
   <url>http://maven.apache.org</url>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
     <coinstack.version>3.5.1</coinstack.version>
   </properties>
 
   <dependencies>
-		<!-- https://mvnrepository.com/artifact/io.blocko/coinstack -->
-		<dependency>
-				<groupId>io.blocko</groupId>
-				<artifactId>coinstack</artifactId>
-				<version>${coinstack.version}</version>
-		</dependency>
+    <!-- https://mvnrepository.com/artifact/io.blocko/coinstack -->
+    <dependency>
+      <groupId>io.blocko</groupId>
+      <artifactId>coinstack</artifactId>
+      <version>${coinstack.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -29,4 +35,37 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-eclipse-plugin</artifactId>
+        <configuration>
+          <downloadSources>false</downloadSources>
+          <downloadJavadocs>false</downloadJavadocs>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.7.0</version>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <version>9.0.5.v20130815</version>
+        <configuration>
+          <httpConnector>
+            <port>8888</port>
+          </httpConnector>
+          <scanIntervalSeconds>1</scanIntervalSeconds>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
