--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,13 @@
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
   http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-  metadata-complete="false"
-  version="3.1">   
+  metadata-complete="false" version="3.1">
+  <servlet>
+    <servlet-name>market</servlet-name>
+    <servlet-class>io.blocko.simpledapp.MarketServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>market</servlet-name>
+    <url-pattern>/</url-pattern>
+  </servlet-mapping>
 </web-app>
